--- a/designsystem.html
+++ b/designsystem.html
@@ -138,15 +138,12 @@
 				<p class="txt-box-pad-bot-20">For the rebrand, we prioritized Dark Mode, which was absent in the current system. Research shows that about 70% of software engineers prefer Dark Mode, and user feedback indicated a strong demand for it. Additionally, Dark Mode helps save battery life, reduces blue light, and lessens eye strain.</p>
 				<span class="text-grey">Accessibility</span>
 				<p class="txt-box-pad-bot-20">The legacy system lacked thorough accessibility checks. By collaborating with A11y specialists from Applause, we established a mandatory process ensuring that no component is approved without a review with Applause designers.</p>
-				<span class="text-grey">Typography</span>
-				<p class="txt-box-pad-bot-20">CiscoSansTT, created in 2010, has been widely used but has issues like alignment problems, large file sizes, missing glyphs, and poor language support. Inter, designed for screens and available under a Common License, improves readability with its tall x-height. It is offered as both static and Variable Fonts, with hinted versions that enhance ClearType rendering on Windows.</p>
 				<div class="txt-box-pad-bot-40">
 					<img class="img-center" src="assets/images/momentum_rebrand/atomic.jpg">
 					<span class="text-grey">Atomic design level down to Atoms, then move up to Molecules and Organisms.</span>
 				</div>	
 				<div class="txt-box-pad-bot-40">
 					<img class="img-center" src="assets/images/momentum_rebrand/inter.jpg">
-					<span class="text-grey">Atomic design level down to Atoms, then move up to Molecules and Organisms.</span>
 				</div>
 
 			</div>
@@ -167,6 +164,89 @@
 			</div>
 		</div>
 	</div>
+
+	<div class="container container-small work-stats">
+		<div class="row product_site">
+			<div class="col-md-12 ">
+				<h3 class="text-white">Colors</h3>
+				<p>The renewed palette features a black and white foundation, complemented by core product colors. Black or white serves as the preferred background color, with alpha states adding depth through various shades. </p>
+				<p>Each color includes lighter and darker shade tokens, designed for specific backgrounds to meet accessibility standards. The neutral palette encompasses a range of white, black, and gray tones.</p>
+				<p class="txt-box-pad-bot-40">The decorative color palette enhances the brand's visual expression with digitally native, bright, and high-contrast accent tones, primarily used for aesthetic elements such as illustrations, data visualizations, and charting.</p>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="container-fluid txt-box-pad-bot-100">
+		<div class="row">
+			<div class="col-sm-12  no-pad">
+				<img class="img-center" src="assets/images/momentum_rebrand/momentumcolors.jpg">
+			</div>
+		</div>
+	</div>
+
+	<div class="container container-small work-stats">
+		<div class="row product_site">
+			<div class="col-md-12 ">
+				<h3 class="text-white">Typography</h3>
+				<p class="txt-box-pad-bot-40">CiscoSansTT, created in 2010, has been widely used but has issues like alignment problems, large file sizes, missing glyphs, and poor language support. Inter, designed for screens and available under a Common License, improves readability with its tall x-height. It is offered as both static and Variable Fonts, with hinted versions that enhance ClearType rendering on Windows.</p>
+								<div class="txt-box-pad-bot-20">
+					<img class="img-center" src="assets/images/momentum_rebrand/inter.jpg">
+				</div>
+
+			</div>
+		</div>
+	</div>
+
+
+	<div class="container-fluid txt-box-pad-bot-100">
+		<div class="row">
+			<div class="col-sm-12  no-pad">
+				<img class="img-center" src="assets/images/momentum_rebrand/momentumtypography.jpg">
+			</div>
+		</div>
+	</div>
+
+	<div class="container container-small work-stats">
+		<div class="row product_site">
+			<div class="col-md-12 ">
+				<h3 class="text-white">Logo System</h3>
+				<p class="txt-box-pad-bot-40">The Webex Helix logo is used to build equity and recognition for the Webex brand, our symbol is distinct and modern to convey our forward-thinking nature. It is both a “W” for Webex and a helix, comprised of two rounded, equal forms that come together, representing the harmonious flow of ideas that happens when we collaborate with each other.
+</p>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="container-fluid txt-box-pad-bot-100">
+		<div class="row">
+			<div class="col-sm-12  no-pad">
+				<img class="img-center" src="assets/images/momentum_rebrand/momentumlogo.jpg">
+			</div>
+		</div>
+	</div>
+
+
+	<div class="container container-small work-stats">
+		<div class="row product_site">
+			<div class="col-md-12 ">
+				<h3 class="text-white">Grid System</h3>
+				<p class="txt-box-pad-bot-40">TThe underlying grid provides a robust foundation to build cohesive layouts. Using structured layouts creates a strong visual balance to complement our rounded UI system. The UI grid, columns, gutters, and spacing scale from the fundamental base unit. Adequate white space reduces the reliance on containers to group content, decreasing clutter and noise. Rhythm and balance are achieved through repeating alignment patterns. </p>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="container-fluid txt-box-pad-bot-100">
+		<div class="row">
+			<div class="col-sm-12  no-pad">
+				<img class="img-center" src="assets/images/momentum_rebrand/grid.jpg">
+			</div>
+		</div>
+	</div>
+
+
+
 
 
 	<div class="container container-fluid cisco_black">
