--- a/designsystem.html
+++ b/designsystem.html
@@ -79,10 +79,19 @@
 						<h3>Role</h3>
 						<p class="txt-box-pad-bot-20">Component Design, Component Documentation, Component QC</p>
 					</div>
+					<div class="col-md-6">
+						<h3>Client</h3>
+						<p>Momentum Designers</p>
+					</div>
+					<div class="col-md-6">
+						<h3>Stakeholders</h3>
+						<p class="txt-box-pad-bot-20">Momentum Designers, Design Director, <br/>EVP of Design</p>
+					</div>
 					<div class="col-md-12">
 						<img class="img-center txt-box-pad-bot-20" src="assets/images/momentum_rebrand/components.jpg">
 					</div>
 				</div>
+
 			</div>
 
 		</div>
