--- a/doc_site.html
+++ b/doc_site.html
@@ -75,6 +75,16 @@
 							<p class="txt-box-pad-bot-20">Head Designer, Research, Stragety</p>
 						</div>
 					</section>
+					<section id="work-header" class="hero-sec product_site">
+						<div class="col-md-6">
+							<h3>Client</h3>
+							<p>Momentum Designers and Engineers</p>
+						</div>
+						<div class="col-md-6">
+							<h3>Stakeholders</h3>
+							<p class="txt-box-pad-bot-20">Other designers in Momentum Design system team, Director of Design, Director of Collaboration</p>
+						</div>
+					</section>
 					<div class="col-md-12">
 						<img class="img-center txt-box-pad-bot-80" src="assets/images/doc_site/docusite_home.jpg">
 					</div>
@@ -121,6 +131,9 @@
 					<span class="text-grey">What our users need</span>
 					<p class="txt-box-pad-bot-20">
 					Our primary users are Momentum designers working on Webex, Control Hub, Partner Hub, Webex Analytics Platform, and Webex engineers implementing the designs. Both designers and engineers need access to color tokens, spacing tokens, and typeface tokens to ensure consistency across all products.</p>
+					<span class="text-grey">Communication</span>
+					<p class="txt-box-pad-bot-20">
+					Communication for this project was straightforward since the main stakeholders were designers from the same Momentum Design Systems team. I provided updates during twice-weekly stand-ups to ensure everything stayed on track. I also scheduled milestone check-ins with the Director of Design and Director of Communication to keep them informed. Since the Director of Design contributed a significant amount of content for the website, we held three additional meetings to review the pages and ensure the content and visuals aligned properly.</p>
 					<img class="img-center txt-box-pad-bot-80" src="assets/images/doc_site/planned.jpg">
 					<div class="txt-box-pad-bot-40">
 						<img class="img-center" src="assets/images/doc_site/audit.jpg">
