--- a/ftsw.html
+++ b/ftsw.html
@@ -74,6 +74,16 @@
 							<p class="txt-box-pad-bot-20">Visual Design, User Experience, Strategy</p>
 						</div>
 					</section>
+					<section id="work-header" class="hero-sec product_site">
+						<div class="col-md-6">
+							<h3>Client</h3>
+							<p>Cisco Partner level customers (100+ Users) </p>
+						</div>
+						<div class="col-md-6">
+							<h3>Stakeholders</h3>
+							<p class="txt-box-pad-bot-20">Product Manager, Product Lead, <br/>EVP & CPO (Chief Product Officer)</p>
+						</div>
+					</section>
 					<div class="col-md-12">
 						<img class="img-center txt-box-pad-bot-80" src="assets/images/ftsw/set-up.png">
 					</div>
@@ -118,6 +128,9 @@
 					<span class="text-grey">What our users need</span>
 					<p class="txt-box-pad-bot-20">
 					Our users need a simple and easy to understand way to try out service, and lead them to paid services without any hassel. We need to be firm on what we provide, what information we need from them in order to deliver ther service they need and lead them to Control Hub for any further property settings.</p>
+					<span class="text-grey">Communication</span>
+					<p class="txt-box-pad-bot-20">The product manager and designers held weekly stand-ups to relay feedback from the Product Lead and EVP. While communication was smooth, having the EVP as a stakeholder meant there were additional voices, like product directors, giving feedback indirectly. The biggest challenge was accommodating the variety of client paths raised by the Product Leads and EVP. We also lacked access to the actual process, as the software was for Partner-level clients, with only the product manager having access to mimic the process, making collaboration more difficult.</p>
+					<p class="txt-box-pad-bot-20">In addition to weekly stand-ups, we held weekly sessions during the initial design phase to review each scenario with the Product Manager. This helped us map out all possible user routes based on their choices.</p>
 				</div>
 			</div>
 		</div>
