--- a/keyscreen.html
+++ b/keyscreen.html
@@ -238,7 +238,7 @@
 			<div class="col-md-4"></div>
 				<div class="col-md-4">
 					<div class="icon-center">
-						<a class="icon-pad" href="assets/ak_resume_2024.pdf" target="_blank">
+						<a class="icon-pad" href="assets/AK_Resume_4_25.pdf" target="_blank">
 							<svg class="icon-size">
 							  <use xlink:href="#resume"/>
 							</svg>
