--- a/index.html
+++ b/index.html
@@ -133,6 +133,20 @@
 				</div>
 
 				<div class="col-md-12 project-section">
+					<a href="keyscreen.html">
+						<div class="work-thumb">
+							<div class="work-title">
+					     </div>
+				        	<img src="assets/images/typeahead_thumb.png">
+				     </div>
+			     </a>
+			     <div class="text-box">
+			     		<p class="project-title">Cisco Support Search Typeahead</p>
+			     		<p>The typeahead feature is designed to enhance the search experience by dynamically guiding users to relevant content as they type. It offers real-time suggestions tailored to the context of each page, ensuring users can quickly find what they need. This feature incorporates elements like recent searches, suggested searches, and top questions</p>
+			     </div>
+				</div>
+
+				<div class="col-md-12 project-section">
 					<a href="ftsw.html">
 						<div class="work-thumb">
 							<div class="work-title"></div>
