--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 			    </div>
 				</div>
 
-				<div class="col-md-12 project-section">
+<!-- 				<div class="col-md-12 project-section">
 					<a href="keyscreen.html">
 						<div class="work-thumb">
 							<div class="work-title">
@@ -171,7 +171,7 @@
 			     		<p class="project-title">Momentum Key Screen Library</p>
 			     		<p>To prevent outdated or incorrect screenshots in presentations, we created a library of product and feature key screens for designers and PMs to use as a reliable reference.</p>
 			     </div>
-				</div>
+				</div> -->
 				
 			</div>
 
