--- a/about.html
+++ b/about.html
@@ -71,10 +71,10 @@
 				<h3 class="about-subtitle text-white">About Me</h3>
 			</div>
 			<div class="col-md-8">
-				<h3 class="about-h3 text-white txt-box-pad-bot-20">UI/UX digital product designer based in Brooklyn NY. I’m looking to join a cross-functional team that prioritizes improving user experience through accessible and innovative design. </h3>
-					<h3 class="about-h3 text-white txt-box-pad-bot-20">I have experience working with clients in various fields such as US federal government, healthcare, education and agriculture, telecommunication and commercial brands.<h3/>
-										<h3 class="text-white txt-box-pad-bot-60"><a href="mailto:kimandy703@gmail.com">Email Me</a></h3>
-						<h3 class="about-h3 text-white txt-box-pad-bot-20">Outside design, I am a music producer who specialize in hip hop and rnb beat making. I mostly work with independent artis in New Yok, and make lofi beats. You can check out my music <a href="https://www.youtube.com/@ndk703" target="empty">here</a><h3/>
+				<h3 class="about-h3 text-white txt-box-pad-bot-20">Andy Kim is a multidisciplinary product designer with front-end coding skills, bridging the gap between design and engineering. He has a strong track record of collaborating effectively with clients, UX researchers, engineers, and cross-functional teams.</h3>
+				<h3 class="about-h3 text-white txt-box-pad-bot-20">Andy has extensive experience working in agency environments for clients in government, sports, healthcare, education, and more, as well as in-house design teams at large corporate organizations. His background also includes event production, and he is fluent in Korean and Japanese.<h3/>
+				<h3 class="text-white txt-box-pad-bot-60"><a href="mailto:kimandy703@gmail.com">Email Me</a></h3>
+				<h3 class="about-h3 text-white txt-box-pad-bot-20">Beyond design, Andy is a music producer who has worked with some of the biggest R&B artists in the world, bringing a unique creative perspective to all his projects.You can check out my music <a href="https://open.spotify.com/playlist/12F4fiU5iVIbe9RkWPTAmX?si=16fe00716bd44920" target="empty">here</a><h3/>
 			</div>
 		</div>
 	</div>
@@ -125,7 +125,7 @@
 			<div class="col-md-4">
 				<h3 class="about-subtitle text-white">About Me</h3>
 				<h3 class="about-subtitle-sm text-white">
-				  <a href="assets/ak_resume_2024.pdf" target="_blank">Download Resume</a>
+				  <a href="assets/AK_Resume_4_25.pdf" target="_blank">Download Resume</a>
 				</h3>
 				<h3 class="about-subtitle-sm text-white">
 				  <a href="https://www.linkedin.com/in/kimandy703" target="_blank">LinkedIn</a>
@@ -162,7 +162,7 @@
 			<div class="col-md-4"></div>
 				<div class="col-md-4">
 					<div class="icon-center">
-						<a class="icon-pad" href="assets/ak_resume_2024.pdf" target="_blank">
+						<a class="icon-pad" href="assets/AK_Resume_4_25.pdf" target="_blank">
 							<svg class="icon-size">
 							  <use xlink:href="#resume"/>
 							</svg>
