index PLB added

--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
 						<div class="work-thumb">
 							<div class="work-title">
 					     </div>
-				        	<img src="assets/images/typeahead_thumb.png">
+				        	<img src="assets/images/PLB_thumb.png">
 				     </div>
 			     </a>
 			     <div class="text-box">
-			     		<p class="project-title">Cisco Support Search Typeahead</p>
-			     		<p>The typeahead feature is designed to enhance the search experience by dynamically guiding users to relevant content as they type. It offers real-time suggestions tailored to the context of each page, ensuring users can quickly find what they need. This feature incorporates elements like recent searches, suggested searches, and top questions</p>
+			     		<p class="project-title">Cisco Support Partner Logo Builder</p>
+			     		<p>Redesign of Cisco Partner Logo Builder UX and UI design. Cisco partners rely on official logos and credentials to represent their relationship with Cisco across sales, marketing, and certification materials. These partners are not just users — they are paid clients, often operating at scale.</p>
 			     </div>
 				</div>
 
