--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 				</div>
 
 				<div class="col-md-12 project-section">
-					<a href="keyscreen.html">
+					<a href="logobuilder.html">
 						<div class="work-thumb">
 							<div class="work-title">
 					     </div>
