--- a/logobuilder.html
+++ b/logobuilder.html
@@ -156,8 +156,22 @@
 				<li>Download confusion and fragmented outputs</li>
 			</ul>
 			<p>We collaborated with internal stakeholders and partner-facing teams to understand how partners actually used assets and what outcomes they cared most about.</p>
-			<p>Bi-weekly stakeholder check-ins ensured alignment across product, brand, partner program teams, and internal clients throughout design iterations.</p>
+			<p class="txt-box-pad-bot-40">Bi-weekly stakeholder check-ins ensured alignment across product, brand, partner program teams, and internal clients throughout design iterations.</p>
 		</div>
+
+		<div class="col-md-12 ">
+			<h3 class="text-white txt-box-pad-bot-20">Design Process</h3>
+			<h4>User Flows & Mapping</h4>
+			<p class="txt-box-pad-bot-20">We reframed the partner’s journey into discrete, intentional steps rather than a single sprawling page.</p>
+			<h4>Wireframes & Prototypes</h4>
+			<p class="txt-box-pad-bot-20">Iterative wireframes helped us refine the logic before moving into visual design.</p>
+			<h4>Visual Design & System Integration</h4>
+			<p class="txt-box-pad-bot-20">The UI was modernized to align with Cisco brand standards, with thoughtful type, spacing, and spacing logic that reduced overwhelm and improved readability.</p>
+			<h4>Feedback Loops</h4>
+			<p class="txt-box-pad-bot-20">Bi-weekly client reviews shaped design decisions and ensured solutions aligned with partner expectations.</p>
+			<p>*Additional details and a live prototype walkthrough are available upon request during the interview process.</p>
+		</div>
+
 	</div>
 </div>
 
@@ -202,13 +216,10 @@
 	</div>
 </div>
 
-
-
-
 	<div class="container-fluid cisco_black">
 		<div class="row">
 			<div class="col-sm-12 work-stats">
-				<img class="img-center" src="assets/images/plb/plb_new_1.jpg">
+				<img class="img-center" src="assets/images/border.png">
 			</div>
 		</div>
 	</div>
@@ -216,27 +227,89 @@
 <div class="container container-small work-stats">
 	<div class="row product_site">
 		<div class="col-md-12 ">
-			<h3 class="text-white txt-box-pad-bot-20">Design Process</h3>
-			<h4>User Flows & Mapping</h4>
-			<p class="txt-box-pad-bot-20">We reframed the partner’s journey into discrete, intentional steps rather than a single sprawling page.</p>
-			<h4>Wireframes & Prototypes</h4>
-			<p class="txt-box-pad-bot-20">Iterative wireframes helped us refine the logic before moving into visual design.</p>
-			<h4>Visual Design & System Integration</h4>
-			<p class="txt-box-pad-bot-20">The UI was modernized to align with Cisco brand standards, with thoughtful type, spacing, and spacing logic that reduced overwhelm and improved readability.</p>
-			<h4>Feedback Loops</h4>
-			<p class="txt-box-pad-bot-20">Bi-weekly client reviews shaped design decisions and ensured solutions aligned with partner expectations.</p>
-			<p>*Additional details and a live prototype walkthrough are available upon request during the interview process.</p>
+			<h3 class="text-white txt-box-pad-bot-20">Logo Process</h3>
+			<p>The Logo flow was designed to support both simple and advanced partner use cases without forcing unnecessary decisions.</p>
+			<p>Partners begin by selecting the logo they need from a unified entry point, rather than navigating separate tools for wordmarks or partner logos. From the first interaction, a persistent Download Summary panel tracks selections and next steps, helping users stay oriented throughout the process.</p>
+			<p>If a partner selects a Customizable Cisco Partner Logo, they are guided into a focused customization step where:</p>
+			<ul>
+				<li>The logo preview is prioritized at the top for immediate visual feedback</li>
+				<li>Credential terminology is updated to Portfolios for clarity and alignment</li>
+				<li>Partners can choose to add portfolios or download the logo without them</li>
+			</ul>
+			<p>As selections are made, the Download Summary updates in real time, reinforcing confidence and reducing decision fatigue. Instead of requiring multiple manual downloads, the final output is a single ZIP file containing all approved color and file format variations.</p>
 		</div>
 	</div>
 </div>
 
-<div class="container-fluid cisco_black">
+	<div class="container-fluid cisco_black">
 		<div class="row">
 			<div class="col-sm-12 work-stats">
-				<img class="img-center" src="assets/images/keyscreen/review.jpg">
+				<img class="img-center" src="assets/images/plb/plb_logo_process.jpg">
 			</div>
 		</div>
 	</div>
+
+<div class="container container-small work-stats">
+	<div class="row product_site">
+		<div class="col-md-12 ">
+			<h3 class="text-white txt-box-pad-bot-20">Certificate Process</h3>
+			<p>The Certificate flow was designed to feel official, trustworthy, and highly contextual, reflecting the importance of certification for Cisco partners.</p>
+			<p>Partners begin by seeing their company name prefilled in the “Awarded to” field, along with a visible validation date, reinforcing legitimacy from the first interaction.</p>
+			<p>From there, the flow guides partners through a structured, rules-based configuration:</p>
+			<ul>
+				<li><strong>Program Selection:</strong><br> The program dropdown only surfaces programs the partner has actually certified for, removing guesswork and preventing invalid selections.</li>
+				<li><strong>Country Selection:</strong><br> Partners can select up to three countries where the certification applies. If no country is selected, the system automatically defaults to an appropriate regional designation (e.g., EU, Asia Pacific), ensuring the certificate is always valid and complete.t</li>
+				<li><strong>Language Selection:</strong><br> Certificates default to English, with the option to generate certificates in other supported languages, allowing partners to localize assets for regional use.</li>
+			</ul>
+			<p>As partners make selections, the Download Summary panel updates in real time, showing a live preview of the certificate and confirming all choices before download. Once the configuration is complete, partners can confidently download their certificate knowing it reflects accurate program, region, and language information.</p>
+		</div>
+	</div>
+</div>
+
+	<div class="container-fluid cisco_black">
+		<div class="row">
+			<div class="col-sm-12 work-stats">
+				<img class="img-center" src="assets/images/plb/plb_cert_process.jpg">
+			</div>
+		</div>
+	</div>
+
+<div class="container container-small work-stats">
+	<div class="row product_site">
+		<div class="col-md-12 ">
+			<h3 class="text-white txt-box-pad-bot-20">Badge Process</h3>
+			<p>The Badge experience was designed to help partners showcase the breadth of their expertise in a compact, digital-friendly format.</p>
+			<p>Badges allow partners to add their earned credentials to an official Cisco Partner Badge, making it easy to communicate credibility across websites, profiles, and digital touchpoints.</p>
+			<p>Partners configure badges through three clearly defined sections:</p>
+			<ul>
+				<li><strong>Portfolios:</strong><br> Partners can select up to four portfolios, ensuring the badge remains readable while still representing core areas of expertise.</li>
+				<li><strong>Specializations:</strong><br> Partners can choose up to six specializations. While these options share the same underlying credential set as competencies, separating them into their own section helps partners better understand how their expertise is categorized.</li>
+				<li><strong>Competencies:</strong><br> Competencies use the same eligible options as specializations but are intentionally presented as a distinct section to align with Cisco’s partner program structure and mental model.</li>
+			</ul>
+			<p>This separation improves clarity without increasing complexity.</p>
+			<p>As partners make selections across all three sections, the Download Summary panel updates in real time, reflecting their choices and showing a live preview of the badge. This immediate feedback helps partners validate hierarchy, balance, and readability before downloading.</p>
+			<p>Once satisfied, partners can confidently download the badge, knowing it accurately represents their credentials and aligns with Cisco branding standards.</p>
+		</div>
+	</div>
+</div>
+
+	<div class="container-fluid cisco_black">
+		<div class="row">
+			<div class="col-sm-12 work-stats">
+				<img class="img-center" src="assets/images/plb/plb_badge_process.jpg">
+			</div>
+		</div>
+	</div>
+
+<!-- <div class="container-fluid cisco_black">
+	<div class="row">
+		<div class="col-sm-12 work-stats">
+			<video width="1440" height="240" autoplay>
+  			<source src="assets/video/plb.mp4" type="video/mp4">
+			</video>
+		</div>
+	</div>
+</div> -->
 
 <div class="container container-small work-stats">
 	<div class="row product_site">
@@ -249,15 +322,6 @@
 				<li>Early engineering collaboration ensured feasibility and alignment</li>
 			</ul>
 			<p>This prevented rework and allowed developers to build with confidence.</p>
-		</div>
-	</div>
-</div>
-
-		
-<div class="container-fluid cisco_black">
-	<div class="row">
-		<div class="col-sm-12 work-stats">
-			<img class="img-center" src="assets/images/keyscreen/library.jpg">
 		</div>
 	</div>
 </div>
