--- a/logobuilder.html
+++ b/logobuilder.html
@@ -301,15 +301,24 @@
 		</div>
 	</div>
 
-<!-- <div class="container-fluid cisco_black">
+<div class="container container-small">
+	<div class="row product_site">
+		<div class="col-md-12 ">
+			<h3 class="text-white txt-box-pad-bot-20">Prototype</h3>
+			<p>Prototype walkthrough demonstrating all three Partner Logo Builder flows — Logo, Certificate, and Badge — with guided steps and real-time download summary updates.</p>
+		</div>
+	</div>
+</div>
+
+<div class="container-fluid cisco_black">
 	<div class="row">
 		<div class="col-sm-12 work-stats">
-			<video width="1440" height="240" autoplay>
-  			<source src="assets/video/plb.mp4" type="video/mp4">
+			<video class="video-inst" preload="metadata" webkit-playsinline playsinline loop autoplay muted style="aspect-ratio: 2880 / 2022;"y>
+  			<source src="assets/images/plb/plb.mp4" type="video/mp4">
 			</video>
 		</div>
 	</div>
-</div> -->
+</div>
 
 <div class="container container-small work-stats">
 	<div class="row product_site">
